--- a/public/index.html
+++ b/public/index.html
@@ -2,8 +2,11 @@
 <html>
 <head>
     <title>For Diana</title>
-    <script src="./js/jquery.js"></script>
-    <script src="./js/app.js"></script>
+    <!-- TODO: Replace with CSS -->
+    <link rel="stylesheet/less" type="text/css" href="less/styles.less">
+    <script src="js/lib/less/less.min.js" type="text/javascript"></script>
+    <script src="js/jquery.js"></script>
+    <script src="js/app.js"></script>
 
     <meta name="viewport" content="initial-scale=1.0, user-scalable=no" />
     <style type="text/css">
