--- a/public/index.html
+++ b/public/index.html
@@ -9,22 +9,7 @@
     <script src="js/app.js"></script>
 
     <meta name="viewport" content="initial-scale=1.0, user-scalable=no" />
-    <style type="text/css">
-        html { height: 100% }
-        body { height: 100%; margin: 0; padding: 0 }
-        #map-canvas {
-            height: 90%;
-            width: 100%;
-            margin-top: 30px;
-        }
-        input {
-            height: 50px;
-            font-size: 24px
-        }
-        .locations {
-            text-align: center;
-        }
-    </style>
+
     <script type="text/javascript" src="http://maps.googleapis.com/maps/api/js?key=AIzaSyDY4i1NNxuNos3bn5kx9_t5-LRtgi7RQ7I&sensor=true"></script>
     <script type="text/javascript">
         function initialize() {
@@ -37,7 +22,9 @@
         }
 
         $(function(){
-            $('#submit-button').click(function(){
+            $('#submit-button').click(function(e){
+                e.preventDefault();
+                
                 $.ajax('/route', {
                     data: {
                         start: $('#start-location').val(),
@@ -54,12 +41,17 @@
         });
     </script>
 </head>
-<body onload="initialize()">
-    <div class="locations">
-        <input type="text" id="start-location" placeholder="Start" />
-        <input type="text" id="end-location" placeholder="End" />
-        <input type="submit" id="submit-button" value="Route me!" />
-    </div>
-    <div id="map-canvas"></div>
+<body onload="initialize()" class="row-fluid">
+    <form class="locations form-inline span12">
+        <label for="start-location">A</label>
+        <input type="text" id="start-location" name="start-location" placeholder="Start" />
+
+        <label for="end-location">B</label>
+        <input type="text" id="end-location" name="start-location" placeholder="End" />
+
+        <input type="submit" id="submit-button" class="btn btn-primary" value="Route me!" />
+    </form>
+
+    <div id="map-canvas" class="map-canvas"></div>
 </body>
 </html>
