--- a/public/index.html
+++ b/public/index.html
@@ -10,17 +10,17 @@
     <script src="js/app.js"></script>
 
     <script type="text/javascript">
-        // function initialize() {
-        //     app.initialize();
-        //     console.log('init');
-        // };
+        var diana
+        $(function() {
+            diana = new Diana();
+        });
     </script>
 
     <meta name="viewport" content="initial-scale=1.0, user-scalable=no" />
 
     <script type="text/javascript" src="http://maps.googleapis.com/maps/api/js?key=AIzaSyDY4i1NNxuNos3bn5kx9_t5-LRtgi7RQ7I&sensor=true"></script>
 </head>
-<body onload="initialize()" class="row-fluid">
+<body class="row-fluid">
     <form id="locations" class="locations form-inline span12">
         <div class="input-prepend">
             <span class="add-on">A</span>
