Add some default values for testing. Fix map canvas ID so bootstrap reset doesn't screw google map controls

--- a/public/index.html
+++ b/public/index.html
@@ -9,13 +9,6 @@
     <script src="js/lib/lodash/lodash.min.js"></script>
     <script src="js/app.js"></script>
 
-    <script type="text/javascript">
-        // function initialize() {
-        //     app.initialize();
-        //     console.log('init');
-        // };
-    </script>
-
     <meta name="viewport" content="initial-scale=1.0, user-scalable=no" />
 
     <script type="text/javascript" src="http://maps.googleapis.com/maps/api/js?key=AIzaSyDY4i1NNxuNos3bn5kx9_t5-LRtgi7RQ7I&sensor=true"></script>
@@ -29,12 +22,12 @@
 
         <div class="input-prepend">
             <span class="add-on">B</span>
-            <input type="text" id="end-location" name="end-location" value="caltrain, san francisco" placeholder="End" />
+            <input type="text" id="end-location" name="end-location" value="4th and king, san francisco" placeholder="End" />
         </div>
 
         <input type="submit" id="submit-button" class="btn btn-primary" value="Route me!" />
     </form>
 
-    <div id="map-canvas" class="map-canvas"></div>
+    <div id="map_canvas" class="map-canvas"></div>
 </body>
 </html>
