--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,7 @@
     <script src="js/lib/less/less.min.js" type="text/javascript"></script>
     <script src="js/jquery.js"></script>
     <script src="js/lib/lodash/lodash.min.js"></script>
+    <script src="js/lib/lodash/mixins.js"></script>
     <script src="js/app.js"></script>
 
     <script type="text/javascript">
@@ -34,7 +35,7 @@
 
         <input type="submit" id="submit-button" class="btn btn-primary" value="Route me!" />
     </form>
-
-    <div id="map_canvas" class="map-canvas"></div>
+    <div id="streetview" class="streetview gmap"></div>
+    <div id="map_canvas" class="map-canvas gmap"></div>
 </body>
 </html>
