--- a/public/index.html
+++ b/public/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>For Diana</title>
+    <title>Diana</title>
     <!-- TODO: Replace with CSS -->
     <link rel="stylesheet/less" type="text/css" href="less/styles.less">
     <script src="js/lib/less/less.min.js" type="text/javascript"></script>
@@ -9,6 +9,7 @@
     <script src="js/lib/lodash/lodash.min.js"></script>
     <script src="js/lib/lodash/mixins.js"></script>
     <script src="js/app.js"></script>
+    <script src="http://d3js.org/d3.v3.js"></script>
 
     <script type="text/javascript">
         var diana
