--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,7 @@
     <script src="js/jquery.js"></script>
     <script src="js/lib/lodash/lodash.min.js"></script>
     <script src="js/lib/lodash/mixins.js"></script>
+    <script src="js/routeHelper.js"></script>
     <script src="js/app.js"></script>
     <script src="http://d3js.org/d3.v3.js"></script>
 
