Implement prev/next

--- a/public/index.html
+++ b/public/index.html
@@ -39,5 +39,15 @@
     </form>
     <div id="streetview" class="streetview gmap"></div>
     <div id="map_canvas" class="map-canvas gmap"></div>
+
+    <div class="controls">
+        <a id="prev" class="btn">
+            Prev
+        </a>
+
+        <a id="next" class="btn">
+            Next
+        </a>
+    </div>
 </body>
 </html>
