Added safety rating thing

--- a/public/index.html
+++ b/public/index.html
@@ -24,6 +24,7 @@
     <script type="text/javascript" src="http://maps.googleapis.com/maps/api/js?key=AIzaSyDY4i1NNxuNos3bn5kx9_t5-LRtgi7RQ7I&sensor=true"></script>
 </head>
 <body class="row-fluid">
+    <div id="safety"></div>
     <form id="locations" class="locations form-inline span12">
         <div class="input-prepend">
             <span class="add-on">A</span>
