--- a/public/index.html
+++ b/public/index.html
@@ -38,5 +38,6 @@
     </form>
     <div id="streetview" class="streetview gmap"></div>
     <div id="map_canvas" class="map-canvas gmap"></div>
+    <div id="progress_bar" class="progress-bar"></div>
 </body>
 </html>
