--- a/public/index.html
+++ b/public/index.html
@@ -48,6 +48,10 @@
         <a id="next" class="btn">
             Next
         </a>
+
+        <a id="play" class="btn">
+            Play
+        </a>
     </div>
 </body>
 </html>
