Use opacity/fade class to hide stuff so they can still be used for calculating width etc

--- a/public/index.html
+++ b/public/index.html
@@ -40,9 +40,9 @@
     </form>
 
     <div id="streetview" class="streetview gmap"></div>
-    <div id="map_canvas" class="map-canvas gmap"></div>
+    <div id="map_canvas" class="map-canvas gmap fade"></div>
 
-    <div class="controls">
+    <div class="controls fade">
         <div class="play-controls">
             <a id="play" class="btn btn-primary btn-large">
                 Play
