Adding a box-shadow to distinguish legs

--- a/public/index.html
+++ b/public/index.html
@@ -31,7 +31,7 @@
     </header>
     <div class="route-controls">
         <div id="safety"></div>
-        <form id="locations" class="locations form-inline span12">
+        <form id="locations" class="locations form-inline">
             <div class="input-prepend">
                 <span class="add-on">A</span>
                 <input type="text" id="start-location" name="start-location" value="hayes valley, san francisco" placeholder="Start" />
