Fixing street view

--- a/public/index.html
+++ b/public/index.html
@@ -46,7 +46,7 @@
         </form>
     </div>
 
-    <div class="canvas">
+    <div id="canvas" class="canvas">
         <div id="streetview" class="streetview gmap"></div>
         <div id="map_canvas" class="map-canvas gmap fade"></div>
     </div>
