--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,7 @@
     <script src="js/jquery.js"></script>
     <script src="js/lib/lodash/lodash.min.js"></script>
     <script src="js/lib/lodash/mixins.js"></script>
+    <script src="js/lib/icanhaz.min.js"></script>
     <script src="js/routeHelper.js"></script>
     <script src="js/app.js"></script>
     <script src="http://d3js.org/d3.v3.js"></script>
@@ -18,7 +19,7 @@
             diana = new Diana();
         });
     </script>
-
+  
     <meta name="viewport" content="initial-scale=1.0, user-scalable=no" />
 
     <script type="text/javascript" src="http://maps.googleapis.com/maps/api/js?key=AIzaSyDY4i1NNxuNos3bn5kx9_t5-LRtgi7RQ7I&sensor=true"></script>
@@ -29,32 +30,26 @@
             For Diana
         </h1>
     </header>
-    <div class="row-fluid">
-        <div class="route-info span2">
-            <span class="time label" style="display:none;"></span>
-            <span class="distance label" style="display:none;"></span>
-        </div>
-        <div class="route-controls span9">
-            <div id="safety"></div>
-            <form id="locations" class="locations form-inline">
-                <div class="input-prepend">
-                    <span class="add-on">A</span>
-                    <input type="text" id="start-location" name="start-location" value="hayes valley, san francisco" placeholder="Start" />
-                </div>
+    <div class="route-controls">
+        <div id="safety"></div>
+        <form id="locations" class="locations form-inline">
+            <div class="input-prepend">
+                <span class="add-on">A</span>
+                <input type="text" id="start-location" name="start-location" value="hayes valley, san francisco" placeholder="Start" />
+            </div>
 
-                <div class="input-prepend">
-                    <span class="add-on">B</span>
-                    <input type="text" id="end-location" name="end-location" value="4th and king, san francisco" placeholder="End" />
-                </div>
+            <div class="input-prepend">
+                <span class="add-on">B</span>
+                <input type="text" id="end-location" name="end-location" value="4th and king, san francisco" placeholder="End" />
+            </div>
 
-                <input type="submit" id="submit-button" class="btn btn-primary" value="Route me!" />
-            </form>
-        </div>
+            <input type="submit" id="submit-button" class="btn btn-primary" value="Route me!" />
+        </form>
     </div>
 
     <div id="canvas" class="canvas">
         <div id="streetview" class="streetview gmap"></div>
-        <div id="map_canvas" class="map-canvas gmap fade"></div>
+        <div id="map_canvas" class="map-canvas gmap fade"></div>        
     </div>
 
     <div class="controls fade">
@@ -81,6 +76,11 @@
         <div id="progress-bar" class="progress"></div>
     </div>
 
-    
+    <script id="routeInfo" type="text/html">
+      <div class="route-info over-map">
+        <span class="time">{{time}}</span>, <span class="distance">{{distance}}</span>
+        <a href="#" class="link">List</a>
+      </div>
+    </script>
 </body>
 </html>
