--- a/public/index.html
+++ b/public/index.html
@@ -88,6 +88,8 @@
 
         <div id="progress-bar" class="progress"></div>
     </div>
+    
+    <div id="directions-proxy" style="display:none;"></div>
 
     <script id="routeInfo" type="text/html">
       <div class="route-info over-map">
