Swap distance and time

--- a/public/index.html
+++ b/public/index.html
@@ -117,7 +117,7 @@
 
     <script id="routeInfo" type="text/html">
       <div class="route-info over-map">
-        <span class="time">{{time}}</span>, <span class="distance">{{distance}}</span>
+        <span class="distance">{{distance}}</span>, <span class="time">{{time}}</span>
         <a href="#" class="link">List</a>
       </div>
     </script>
