Add screenshots to intro

--- a/public/index.html
+++ b/public/index.html
@@ -35,21 +35,24 @@
 
         <div class="route-controls overlay">
             <!-- Intro/What is this help -->
-            <div class="halp intro row-fluid">
+            <div class="halp intro">
                 <ol>
-                    <li class="span4">
+                    <li class="">
                         <h2>Visualize route safety.</h2>
                         <figure>
+                            <img src="images/vis.png" />
                         </figure>
                     </li>
-                    <li class="span4">
+                    <li class="">
                         <h2>Adjust routes as you like.</h2>
                         <figure>
+                            <img src="images/route.png" />
                         </figure>
                     </li>
-                    <li class="span4">
+                    <li class="">
                         <h2>Play a streetview preview.</h2>
                         <figure>
+                            <img src="images/play.png" />
                         </figure>
                     </li>
                 </ol>    
