Restyling the secondary view container.

--- a/public/index.html
+++ b/public/index.html
@@ -30,6 +30,7 @@
     <header class="masthead transition">
         <h1>WiggleMap</h1>
 
+
         <div class="route-wrapper">
 
             <div class="route-controls overlay">
@@ -98,7 +99,7 @@
         <div id="streetview" class="secondary gmap over-map fade">
             <div id="route-info" class="over-map">
                 <span class="metrics"></span>
-                <a href="#" class="link">List</a>
+                <a href="#" class="link btn btn-mini">List</a>
             </div>
         </div>
         <div id="map_canvas" class="primary gmap"></div>
