--- a/public/index.html
+++ b/public/index.html
@@ -87,7 +87,7 @@
                         </div>
 
                         <div class="control-group span2">
-                            <input type="submit" id="submit-button" class="btn btn-primary" value="Find a route" />
+                            <input type="submit" id="submit-button" class="btn btn-primary btn-large" value="Find a route" />
                         </div>
                     </form>
                 </div>
