Restyling the controls/timeline.

--- a/public/index.html
+++ b/public/index.html
@@ -107,20 +107,18 @@
 
     <div class="controls">
         <div class="play-controls fade">
+            <a id="prev" class="btn btn-large"><i class="icon-arrow-left"></i></a>
             <a id="play" class="btn btn-primary btn-large">
-                <i class="icon icon-play"></i> Play
+                <i class="icon-play"></i> Play
             </a>
             <a id="pause" class="btn btn-primary btn-large" style="display: none">
-                <i class="icon icon-pause"></i> Pause
+                <i class="icon-pause"></i> Pause
             </a>
-            <br>
-            <a id="prev" class="btn">Prev</a>
-            <a id="next" class="btn">Next</a>
+            <a id="next" class="btn btn-large"><i class="icon-arrow-right"></i></a>
         </div>
 
         <div id="progress-bar" class="progress"></div>
     </div>
-    
     <div id="directions-proxy" style="display:none;"></div>
 
 </body>
