Change the capitalization for the default example start and destination. Choose a destination that doesn't go on the freeway. But it goes in a store.

--- a/public/index.html
+++ b/public/index.html
@@ -71,7 +71,7 @@
 
                             <div class="input-prepend">
                                 <span class="add-on">A</span>
-                                <input type="text" id="start-location" name="start-location" class="start-location" value="hayes valley, san francisco" placeholder="Start" />
+                                <input type="text" id="start-location" name="start-location" class="start-location" value="Hayes Valley, San Francisco" placeholder="Start" />
                             </div>
                         </div>
 
@@ -82,7 +82,7 @@
 
                             <div class="input-prepend">
                                 <span class="add-on">B</span>
-                                <input type="text" id="end-location" class="end-location" name="end-location" value="4th and king, san francisco" placeholder="End" />
+                                <input type="text" id="end-location" class="end-location" name="end-location" value="2nd and Folsom, San Francisco" placeholder="End" />
                             </div>
                         </div>
 
