Adding skeleton for joyride tour.

--- a/public/index.html
+++ b/public/index.html
@@ -127,11 +127,10 @@
     <!-- Joyride First run tour script -->
     <!--   /* Each tip is set within this <ol>. */
     /* This creates the order the tips are displayed */ -->    
-    <ol id="wiggleTour">
-      <li data-id="progress-bar">Tip content...</li>
-      <li>Tip content...</li>
-      <li data-class="play-controls" data-options="tipLocation:top;tipAnimation:fade" data-button="Second Button">Content...</li>   
-      <li>Welcome...</li>
+    <ol id="joyRideTipContent">
+      <li data-id="progress-bar" data-options="tipLocation:top">Tip content...</li>
+      <li data-class="play" data-options="tipLocation:top;tipAnimation:fade" data-button="Second Button">Content...</li>   
+      <li>Have a fun ride!</li>
     </ol>
 </body>
 </html>
