--- a/public/index.html
+++ b/public/index.html
@@ -128,8 +128,8 @@
     <!--   /* Each tip is set within this <ol>. */
     /* This creates the order the tips are displayed */ -->    
     <ol id="joyRideTipContent">
-      <li data-id="progress-bar" data-options="tipLocation:top">Tip content...</li>
-      <li data-class="play" data-options="tipLocation:top;tipAnimation:fade" data-button="Second Button">Content...</li>   
+      <li data-id="progress-bar" data-options="tipLocation:top">This shows how safe and comfortable each part of your route is!</li>
+      <li data-id="play" data-options="tipLocation:top;tipAnimation:fade" data-button="Next tip">Start a virtual ride of your route.</li>   
       <li>Have a fun ride!</li>
     </ol>
 </body>
