Cleaning up the tour some more.

--- a/public/index.html
+++ b/public/index.html
@@ -128,9 +128,9 @@
     <!--   /* Each tip is set within this <ol>. */
     /* This creates the order the tips are displayed */ -->    
     <ol id="joyRideTipContent">
-      <li data-id="progress-bar" data-options="tipLocation:top">This shows how safe and comfortable each part of your route is!</li>
-      <li data-id="play" data-options="tipLocation:top;tipAnimation:fade" data-button="Next tip">Start a virtual ride of your route.</li>   
-      <li>Have a fun ride!</li>
+      <li data-id="progress-bar" data-options="tipLocation:top"><h3>Safety</h3><p>This shows how safe and comfortable each part of your route is!</p></li>
+      <li data-id="play" data-options="tipLocation:top;tipAnimation:fade" data-button="Next tip"><h3>Start your ride</h3><p>Start a virtual ride of your route.</p></li>   
+      <li><h3>Have a fun ride!</h3><p></p></li>
     </ol>
 </body>
 </html>
