Alignment when route inputs are in header fixes #57

--- a/public/index.html
+++ b/public/index.html
@@ -34,9 +34,9 @@
         <h1>WiggleMap</h1>
 
 
-        <div class="route-wrapper">
+        <div class="route-wrapper overlay">
 
-            <div class="route-controls overlay">
+            <div class="route-controls">
                 <!-- Intro/What is this help -->
                 <div class="halp intro">
                     <h2>
